update viewimports and page

--- a/UmbracoCMS/Views/_ViewImports.cshtml
+++ b/UmbracoCMS/Views/_ViewImports.cshtml
@@ -4,6 +4,11 @@
 @using Umbraco.Cms.Web.Common.Views
 @using Umbraco.Cms.Core.Models.PublishedContent
 @using Microsoft.AspNetCore.Html
+@using Vite.AspNetCore
+@using Vite.AspNetCore.Abstractions
+@using Vite.AspNetCore.Services
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, Smidge
+@addTagHelper *, Vite.AspNetCore
 @inject Smidge.SmidgeHelper SmidgeHelper
+
